Actions
Bug #14056
closedvds: this statement may fall through
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build errors on SPARC:
../../sun4v/io/vds.c: In function 'vd_do_slice_ioctl': ../../sun4v/io/vds.c:3124:3: error: this statement may fall through [-Werror=implicit-fallthrough=] 3124 | switch (cmd) { | ^~~~~~ ../../sun4v/io/vds.c:3142:2: note: here 3142 | default: | ^~~~~~~ cc1: all warnings being treated as errors *** Error code 1 dmake: Fatal error: Command failed for target `obj64/vds.o' Current working directory /code/illumos-gate/usr/src/uts/sun4v/vds
Tag it with /* FALLTHROUGH */.
Testing done: build/install/boot. No functional changes.
Updated by Electric Monk 11 months ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 969dd6c4981a1a1e62620eda12a4577904ce1f7b
commit 969dd6c4981a1a1e62620eda12a4577904ce1f7b Author: Toomas Soome <tsoome@me.com> Date: 2021-09-08T20:23:54.000Z 14056 vds: this statement may fall through Reviewed by: Andy Fiddaman <andy@omnios.org> Approved by: Dan McDonald <danmcd@joyent.com>
Actions